# georeduce

./: README.md  pyproject.toml  run.py
encoder/: encoder.py  farthest_hyperplane_encoder.py  hyperplane_encoder.py  nearest_point_encoder.py  quadrant_encoder.py
geo/: dists.py
vis/: scatter.py
