[tool.poetry]
name = "georeduce"
version = "0.1.0"
description = "Reducing dimensions but maintaining geometric properties"
authors = ["Tamjid Rahman <tamjidarrahman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
scikit-learn = "^1.3.1"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
